--- a/src/components/StatCard.module.css
+++ b/src/components/StatCard.module.css
@@ -86,6 +86,7 @@
   padding: 3px 7px;
   border-radius: 3px;
   margin-top: 2px;
+  white-space: nowrap;
 }
 
 .badge.ok {
